syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.distributedmq.common.proto";
option java_outer_classname = "MetadataProto";

package distributedmq.metadata;

// Metadata Service - manages cluster metadata
service MetadataService {
  // Get partition metadata (leader, replicas, ISR)
  rpc GetPartitionMetadata(PartitionMetadataRequest) returns (PartitionMetadataResponse);
  
  // Get all partitions for a topic
  rpc GetTopicMetadata(TopicMetadataRequest) returns (TopicMetadataResponse);
  
  // Update partition leader (called by Controller after election)
  rpc UpdatePartitionLeader(UpdateLeaderRequest) returns (UpdateLeaderResponse);
  
  // Get consumer offset
  rpc GetConsumerOffset(GetOffsetRequest) returns (GetOffsetResponse);
  
  // Commit consumer offset
  rpc CommitConsumerOffset(CommitOffsetRequest) returns (CommitOffsetResponse);
  
  // Get consumer group metadata
  rpc GetConsumerGroup(ConsumerGroupRequest) returns (ConsumerGroupResponse);
  
  // Register storage node
  rpc RegisterStorageNode(RegisterNodeRequest) returns (RegisterNodeResponse);
  
  // Heartbeat from storage node
  rpc NodeHeartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}

message PartitionMetadataRequest {
  string topic = 1;
  int32 partition = 2;
}

message PartitionMetadataResponse {
  string topic = 1;
  int32 partition = 2;
  string leader_node_id = 3;
  string leader_node_address = 4;
  repeated string replicas = 5;
  repeated string in_sync_replicas = 6;
  int64 high_water_mark = 7;
  int32 leader_epoch = 8;
}

message TopicMetadataRequest {
  string topic = 1;
}

message TopicMetadataResponse {
  string topic = 1;
  repeated PartitionMetadataResponse partitions = 2;
}

message UpdateLeaderRequest {
  string topic = 1;
  int32 partition = 2;
  string new_leader_node_id = 3;
  string new_leader_address = 4;
  int32 new_leader_epoch = 5;
  repeated string new_isr = 6;
}

message UpdateLeaderResponse {
  bool success = 1;
  int32 error_code = 2;
  string error_message = 3;
}

message GetOffsetRequest {
  string group_id = 1;
  string topic = 2;
  int32 partition = 3;
}

message GetOffsetResponse {
  string group_id = 1;
  string topic = 2;
  int32 partition = 3;
  int64 offset = 4;
  int64 timestamp = 5;
}

message CommitOffsetRequest {
  string group_id = 1;
  string topic = 2;
  int32 partition = 3;
  int64 offset = 4;
  string metadata = 5;
  int32 leader_epoch = 6;
}

message CommitOffsetResponse {
  bool success = 1;
  int32 error_code = 2;
}

message ConsumerGroupRequest {
  string group_id = 1;
}

message ConsumerGroupResponse {
  string group_id = 1;
  string state = 2;
  int32 generation_id = 3;
  repeated ConsumerMember members = 4;
}

message ConsumerMember {
  string member_id = 1;
  string client_id = 2;
  string client_host = 3;
}

message RegisterNodeRequest {
  string node_id = 1;
  string host = 2;
  int32 port = 3;
  string rack_id = 4;
}

message RegisterNodeResponse {
  bool success = 1;
  int32 error_code = 2;
}

message HeartbeatRequest {
  string node_id = 1;
  int64 timestamp = 2;
}

message HeartbeatResponse {
  bool success = 1;
  int64 server_timestamp = 2;
}
